# zero_to_product

./: .env  Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20240324065031_make_status_not_null_in_subscriptions.sql  20240324065359_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
